# hestia

./: .gitignore  README.md  requirements.txt
src/: README.md  main.py
src/ESPs/: README.md  esp_test.ino
src/client/: package-lock.json  package.json  tsconfig.app.tsbuildinfo
src/client/src/: main.tsx
src/client/src/app/dashboard/: page.tsx
src/client/src/components/: App.module.css  App.tsx  Story.module.css  story.tsx
src/client/src/components/auth/: auth-guard.tsx
src/client/src/components/chat/: Chat.module.css  Chat.tsx
src/client/src/components/dashboard/overview/: sales.tsx
src/server/: .gitignore  db.sqlite3  main.py  manage.py  pyproject.toml  run_listener.py  run_server.py  run_timer.py
src/server/apis/: spotify_api.py
src/server/core/: TTS.py  function_routing.py  play_ding.py
src/server/hestia_api/: __init__.py  apps.py  consumers.py  views.py
src/server/hestia_core/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
src/server/iot/: main.py  test_audio_out.py
src/server/iot/core/: STT.py  TTS.py  audio_out.py  function_routing.py
src/server/llm/: function_routing.py
src/server/server/: settings.py  urls.py
src/server/speech/: STT.py  TTS.py
src/server/web/: app.py
wake_word_model/: hestia.ppn  hey_hestia.ppn
wake_word_models/: hestia_rpi.ppn  hey_hestia_MAC_20241002.ppn  hey_hestia_rpi.ppn
